-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
Windows 10
Qt 6.8.0 via PySide
-
cc161f0d3 (dev), 5f25a27ef (6.10), 576165c75 (6.9), deedd3b75 (tqtc/lts-6.8)
The fill of a triangle with overhangs on each side (see the pictures, it's hard to explain ) does not render correctly with the curve renderer. It renders correctly with the software and geometry renderers.
This problem seems to only occur when the first and last line segment are perfectly horizontal - raising of lowering the first and last point can fix the problem, or cause other interesting glitches.
For Gerrit Dashboard: QTBUG-133247 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
663261,4 | Curve renderer: Fix filling of certain paths with degenerate parts | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
667171,2 | Curve renderer: Fix filling of certain paths with degenerate parts | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
667233,2 | Curve renderer: Fix filling of certain paths with degenerate parts | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
667340,2 | Curve renderer: Fix filling of certain paths with degenerate parts | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |